# ai_python_for_beguiners

./: .env.example  .gitignore  Untitled.ipynb  pyproject.toml  requirements.txt
L1/: Lesson_1.ipynb  PracticeL1.ipynb  helper_functions.py
L1/.ipynb_checkpoints/: Lesson_1-checkpoint.ipynb  Untitled-checkpoint.ipynb
L2/: Lesson_2.ipynb
L3/: Lesson_3.ipynb
L4/: Lesson_4.ipynb
L5/: Lesson_5.ipynb
L6/: Lesson_6.ipynb
L7/: Lesson_7.ipynb
